assets/sass/components/sub_galleries.scss
@use '../variables' as *;
@use '../tokens/spaces';
@use '../tokens/breakpoints';

$gallery-min-width: 16rem;
$gallery-gap: 4rem;

$eventail-columns: 14;
$evantail-rows: 13;

$eventail-large-image-columns: $eventail-columns - 2;
$eventail-large-image-rows: $evantail-rows - 3;

$eventail-small-image-columns: $eventail-columns - 3;
$eventail-small-image-rows: $evantail-rows - 4;

/* ********************************************
* GALLERIES
* ********************************************/

.sub_galleries {
  container-type: inline-size;
  container-name: sub_galleries;

  // Clear the flag float
  clear: right;

  list-style: none;
  padding-inline-start: 0;

  display: grid;
  grid-template-columns: repeat(
    auto-fill,
    minmax(min(100%, $gallery-min-width), 1fr)
  );
  gap: $gallery-gap;

  align-items: end;

  @container sub_galleries (width >= #{$gallery-min-width * 3 + $gallery-gap * 2}) {
    > :first-child {
      grid-column: span 2;
      grid-row: span 2;
      align-self: start;
    }
  }

  :is(:link, :visited) {
    text-decoration-line: none;
    font-weight: bold;
  }

  .evantail {
    display: grid;
    grid-template-columns: repeat($eventail-columns, 1fr);
    grid-template-rows: repeat($evantail-rows, min-content);

    img {
      aspect-ratio: 3/2;
      object-fit: cover;

      transition-property: transform;
      transition-duration: 0.5s;
      transition-delay: 0.3s;
      transition-timing-function: ease-in-out;
    }

    img:nth-of-type(1) {
      grid-column: 2 / span $eventail-large-image-columns;
      grid-row: 3 / span $eventail-large-image-rows;
      z-index: 3;

      transform-origin: bottom center;
      transform: rotateX(0) translateY(0);
    }

    img:nth-of-type(2) {
      grid-column: 1 / span $eventail-small-image-columns;
      grid-row: 2 / span $eventail-small-image-rows;
      z-index: 2;

      transform-origin: bottom left;
      transform: rotateZ(0) translateX(0);
    }

    img:nth-of-type(3) {
      grid-column: -($eventail-small-image-columns + 1) / span $eventail-small-image-columns;
      grid-row: 1 / span $eventail-small-image-rows;
      z-index: 1;

      transform-origin: bottom right;
      transform: rotateZ(0) translateX(0) translateY(0);
    }

    figcaption {
      grid-column: 2 / span ($eventail-columns - 2);
      grid-row: -2 / span 1;

      font-size: var(--step-0);
    }

    @media (hover: hover) and (prefers-reduced-motion: no-preference) {
      &:hover {
        img:nth-of-type(1) {
          transform: perspective(20rem) rotateX(20deg) translateY(0.5rem);
          z-index: 103;
        }

        img:nth-of-type(2) {
          transform: rotateZ(-10deg) translateX(-0.5rem);
          z-index: 102;
        }

        img:nth-of-type(3) {
          transform: rotateZ(10deg) translateX(0.5rem) translateY(-0.5rem);
          z-index: 101;
        }
      }
    }
  }
}

